src/test/ui/feature-gates/feature-gate-const_generics.stderr
error: `()` is forbidden as the type of a const generic parameter
  --> $DIR/feature-gate-const_generics.rs:1:17
   |
LL | fn foo<const X: ()>() {}
   |                 ^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#[feature(const_generics)]`

error: aborting due to previous error

