src/test/ui/feature-gates/feature-gate-const_generics.rs
fn foo<const X: ()>() {} //~ ERROR const generics are unstable

struct Foo<const X: usize>([(); X]); //~ ERROR const generics are unstable

fn main() {}
